NodePolicy-container-communication.yml
# Allows the web pods to access port 11211 on memcached pods
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: memcached-allow-web
spec:
  podSelector:
    matchLabels:
      name: memcached
  ingress:
  - ports:
    - port: 11211
    from:
    - podSelector:
        matchLabels:
          name: web
